--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Great-Stone-Face-and-Other-Tales-of-the-White-Mountains_1916
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Hawthorne, Nathaniel
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/28
     wikipedia: http://en.wikipedia.org/wiki/Nathaniel_Hawthorne
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1916#The-Great-Stone-Face-and-Other-Tales-of-the-White-Mountains
 gutenberg_issued: '2006-02-26'
 gutenberg_type: Text
 identifiers:
